networking mostly finished. Misc stuffs